Update Gradle build scripts
- Update Android Gradle plug-in to 0.13.2
- Update buildTools to 20.0.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,35 +1,24 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.7.+'
-    }
-}
-apply plugin: 'android'
-
-repositories {
-    mavenCentral()
-}
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    compileSdkVersion 20
+    buildToolsVersion "20.0.0"
 
     defaultConfig {
+        applicationId "org.curiouscreature.android.roadtrip"
         minSdkVersion 17
-        targetSdkVersion 19
+        targetSdkVersion 20
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
             runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile files('lib/androidsvg-1.2.0.jar')
+    compile fileTree(dir: 'libs', include: ['androidsvg-1.2.0.jar'])
 }
