--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.13.0'
+    }
+}
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+}
